# vending-machine

./: .pre-commit-config.yaml  README.md  main.py  openapi:3.0.yml  pyproject.toml  sonar-project.properties  test_vending.py
instance/: database.db
website/: __init__.py  data.json  models.py  views.py
